--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.14",
     "axios": "^1.6.2",
+    "framer-motion": "^12.6.2",
     "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
