--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev:full": "concurrently \"npm run dev\" \"npm run client\""
   },
   "dependencies": {
+    "@mui/icons-material": "^7.0.1",
     "aws-sdk": "^2.1531.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
