--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "@types/react-router-dom": "^5.3.3",
+    "@types/three": "^0.175.0",
     "autoprefixer": "^10.4.14",
     "axios": "^1.6.2",
     "framer-motion": "^12.6.2",
@@ -25,6 +26,7 @@
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.4.1",
+    "three": "^0.175.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
