fix buttons style

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    image: krone128/visionsnapwebpage-server:latest
     environment:
       - DATABASE_URL=postgresql://postgres:postgres@postgres:5432/visionsnap
       - JWT_SECRET=your-secret-key-here
@@ -54,6 +55,7 @@ services:
     build:
       context: ./client
       dockerfile: Dockerfile
+    image: krone128/visionsnapwebpage-client:latest
     ports:
       - "3000:3000"
     environment:
